# runtime_resources

./: README.md
apps/marvin_rviz_debug_bringup/: package.xml
apps/marvin_rviz_debug_bringup/config/: controllers.yaml  execution_manager_right.yaml
apps/marvin_rviz_debug_bringup/launch/: rviz_debug_bringup.launch.py
apps/marvin_trajectory_jtc_test/: CMakeLists.txt
apps/marvin_trajectory_jtc_test/config/: execution_manager.yaml
apps/marvin_trajectory_jtc_test/launch/: trajectory_em_jtc_test.launch.py
episode_recorder_app/: CMakeLists.txt  README.md  package.xml
episode_recorder_app/config/: marvin_teleop_8cam_streams.yaml
episode_recorder_app/launch/: record_episode.launch.py
episode_recorder_app/scripts/: activate_lifecycle_node.py
episode_recorder_app/test/: test_app_contract.py
franka_controller_bringup/: CMakeLists.txt  README.md  package.xml
franka_controller_bringup/config/: controllers.yaml  execution_manager.yaml
franka_controller_bringup/launch/: controller_bringup.launch.py  rviz_debug_bringup.launch.py
hik_camera_bringup/: CMakeLists.txt  README.md  package.xml
hik_camera_bringup/config/: hik_8cam.yaml
hik_camera_bringup/launch/: hik_8cam.launch.py  hik_8cam_foxglove.launch.py
marvin_controller_bringup/: CMakeLists.txt  README.md  package.xml
marvin_controller_bringup/launch/: controller_bringup.launch.py  rviz_debug_bringup.launch.py
marvin_motion_planning_bringup/: README.md  package.xml  setup.cfg  setup.py
marvin_motion_planning_bringup/config/: controllers.yaml  execution.yaml  global_setpoint.yaml  global_trajectory.yaml  online_mpc.yaml  planning.yaml
marvin_motion_planning_bringup/launch/: marvin_motion_planning.launch.py
marvin_motion_planning_bringup/marvin_motion_planning_bringup/: __init__.py  planning_config.py  rviz_targets.py
marvin_motion_planning_bringup/rviz/: marvin_global_trajectory.rviz  marvin_streaming_planner.rviz
marvin_motion_planning_bringup/test/: test_planning_config.py
marvin_rviz_debug_bringup/: CMakeLists.txt  README.md
marvin_rviz_debug_bringup/config/: execution_manager_left.yaml
marvin_rviz_marker_teleop/: CMakeLists.txt  README.md  package.xml
marvin_rviz_marker_teleop/launch/: rviz_marker_teleop.launch.py
marvin_trajectory_jtc_test/: README.md  package.xml
marvin_trajectory_jtc_test/config/: controllers.yaml
marvin_trajectory_jtc_test/scripts/: trajectory_chain_probe.py
rviz_marker_teleop/: CMakeLists.txt  README.md  package.xml
rviz_marker_teleop/config/: franka.yaml  marvin.yaml
rviz_marker_teleop/launch/: rviz_marker_teleop.launch.py
toolbox/rviz_interactive_marker_teleop/: CMakeLists.txt  LICENSE  README.md  package.xml
toolbox/rviz_interactive_marker_teleop/launch/: teleop.launch.py
toolbox/rviz_interactive_marker_teleop/scripts/: target_marker_node.py
