<?xml version="1.0"?>
<package format="3">
  <name>marvin_motion_planning_bringup</name>
  <version>0.1.0</version>
  <description>Config-driven setpoint, trajectory, and online MPC bringup for Marvin.</description>
  <maintainer email="guomning@gmail.com">Gabriel-Ning</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>marvin_description</exec_depend>
  <exec_depend>pyroki_planner_adapter</exec_depend>
  <exec_depend>manipulation_execution_manager</exec_depend>
  <exec_depend>rviz_interactive_marker_pose_source</exec_depend>
  <exec_depend>rviz_topic_button_panel</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros-jazzy-manipulation-position-controllers</exec_depend>
  <exec_depend>ros-jazzy-controller-manager</exec_depend>
  <exec_depend>ros-jazzy-joint-state-broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
