<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_marker_teleop</name>
  <version>0.1.0</version>
  <description>
    Config-driven local-PC RViz interactive-marker pose source for Physical AI
    Runtime controller bringup apps.
  </description>
  <maintainer email="guomning@gmail.com">Gabriel-Ning</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>marvin_description</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rviz_interactive_marker_pose_source</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
