<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marvin_rviz_debug_bringup</name>
  <version>0.1.0</version>
  <description>
    First end-to-end debug pipeline: RViz interactive marker teleop source ->
    execution manager -> TaskSpaceKinematicPositionController on Marvin's
    left arm, running on ros2_control fake hardware. No real robot, no SDK.
  </description>
  <maintainer email="guomning@gmail.com">Gabriel-Ning</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>marvin_description</exec_depend>
  <exec_depend>marvin_hardware_interface</exec_depend>
  <exec_depend>manipulation_execution_manager</exec_depend>
  <exec_depend>manipulation_position_controllers</exec_depend>
  <exec_depend>rviz_interactive_marker_teleop</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
